[tool.poetry]
name = "llm-data-privacy"
version = "0.1.0"
description = "Sample BO assistant application for observability development"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
boto3 = ">=1.42.26"
langchain-aws = ">=1.2.0"
langchain-core = ">=1.2.7"
python-dotenv = ">=1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
